compiler/testData/diagnostics/wasmTests/jsInterop/anonymousInitializer.kt
// FIR_IDENTICAL
external class A {
    <!EXTERNAL_ANONYMOUS_INITIALIZER!>init {
        definedExternally
    }<!>
}